--- a/FeelFlowAnalysis/Components/Pages/Main/Metadata.razor
+++ b/FeelFlowAnalysis/Components/Pages/Main/Metadata.razor
@@ -4,7 +4,7 @@
 
 @using Models.ViewModels
 
-@inject IOptions<Settings> Settings
+@inject Microsoft.Extensions.Options.IOptions<Settings> Settings
 
 <PageTitle>Metadata</PageTitle>
 
