--- a/FeelFlowAnalysis/Components/Pages/Main/Metadata.razor
+++ b/FeelFlowAnalysis/Components/Pages/Main/Metadata.razor
@@ -10,7 +10,7 @@
 
 @if (!string.IsNullOrEmpty(imageDataUrl) && data is not null)
 {
-    <div class="image-data-container">
+    <div>
         <img src="@imageDataUrl" alt="Image" class="user-card"/>
         <div class="data-container">
             <span class="user-info-card">race</span>
