--- a/FeelFlowAnalysis/Components/Pages/Premium/BuyPremium.razor
+++ b/FeelFlowAnalysis/Components/Pages/Premium/BuyPremium.razor
@@ -2,35 +2,42 @@
 
 <PageTitle>Premium</PageTitle>
 
-<div class="card-premium-container">
-  <div class="card-standart card-text">
-    <h2>FeelFlowAnalysis Standard</h2>
-    <ul>
-      <li class="first-marker">Only receiving information about the person in the photo.</li>
-    </ul>
+<div style="display: flex; flex-direction: column; align-items: center;">
+  <div class="card-premium-container">
+    <div class="card-standart card-text">
+      <h2>FeelFlowAnalysis Standard</h2>
+      <ul>
+        <li class="first-marker">Only receiving information about the person in the photo.</li>
+      </ul>
 
-    <span class="price-standart">0$ Per Month </span>
+      <span class="price-standart">0$ Per Month </span>
 
-    <div class="premium-button-container">
-      <button class="standart-button" >You here</button>
+      <div class="premium-button-container">
+        <button class="standart-button" >You here</button>
+      </div>
+
     </div>
+    <div class="card-premium card-text">
+      <h2>FeelFlowAnalysis Premium</h2>
+      <ul>
+        <li class="first-marker">Only receiving information about the person in the photo.</li>
+        <li>Getting methods.</li>
+        <li>Comparison of faces in photos.</li>
+        <li>Story.</li>
+        <li>Camera access.</li>
+      </ul>
 
+      <span class="price">15$ Per Month </span>
+
+      <div class="premium-button-container">
+        <button class="premium-button" >Buy Premium</button>
+      </div>
+
+    </div>
   </div>
-  <div class="card-premium card-text">
-    <h2>FeelFlowAnalysis Premium</h2>
-    <ul>
-      <li class="first-marker">Only receiving information about the person in the photo.</li>
-      <li>Getting methods.</li>
-      <li>Comparison of faces in photos.</li>
-      <li>Story.</li>
-      <li>Camera access.</li>
-    </ul>
-
-    <span class="price">15$ Per Month </span>
-
-    <div class="premium-button-container">
-      <button class="premium-button" >Buy Premium</button>
-    </div>
-
+  <div>
+    <NavLink href="">
+      <button class="btn btn-primary">Go back</button>
+    </NavLink>
   </div>
 </div>
